# gp-pico-sdk

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md
includes/: global.h  led.h
src/: led.c  main.c
